# httpie

./: .http.md  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  RESPONSE_HANDLER.md  httpie.env.json  httpie.py
.github/workflows/: build.yml
fixtures/: test.http  test_env.http  test_file_read.http  test_script.http  test_variables.http
src/: client.rs  environment.rs  error.rs  lib.rs  main.rs  models.rs  parser.rs  script.rs  variable.rs
tests/: mod.rs  test_client.rs  test_error.rs  test_models.rs  test_parser.rs  test_script.rs  test_utils.rs  test_variable.rs
